add update label/taints apis, pass unit test and api test
